--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,18 @@ input {
   	flex-direction: column;
 }
 
+.title-top {
+	margin-top:5vh;
+	display: flex;
+  	justify-content: center;
+  	flex-direction: column;
+}
+
 .name_parent {
 	margin-top: 62px;
 }
+
+
 
 .center_children {
  	text-align: center;
@@ -120,8 +129,25 @@ input {
 	flex-direction: column;
 }
 
+.flex_left_align {
+	display: flex;
+	justify-content: left;
+}
+
 .margin_top_34 {
-	margin-top: 34px
+	margin-top: 34px;
+}
+
+.margin_top_16 {
+	margin-top: 16px;
+}
+
+.margin-left-30 {
+	margin-left: 30px;
+}
+
+.margin-left-5 {
+	margin-left: 5px;
 }
 
 .learning_topics {
@@ -172,34 +198,62 @@ input {
 	color: #1C2ECC;
 }
 
+.name_tag {
+	width: 101px;
+	padding: 8px 19px 8px 19px;
+	border-radius: 10px;
+	margin-left:8.5px;
+	margin-right: 8.5px;
+}
 
+#name_tag1{
+	background: #F9FFFB;
+	border: 1px solid #01CD62;
+}
 
-.top_bar {
-	width: 100vw;
-	height: 70px;
-	margin: 0px;
-	border-bottom: 2px solid #1C2ECC;
+#name_tag1 h3 {
+	color: #01CD62;
+}
+
+#name_tag2{
+	background: #FFFFF9;
+	border: 1px solid #FFCE54;
+}
+
+#name_tag2 h3 {
+	color: #FFCE54;
+}
+
+#name_tag3{
 	background: #F9FBFF;
+	border: 1px solid #1101CD;
+}
+
+#name_tag3 h3 {
+	color: #1101CD;
+}
+
+.discuss_guide {
+	width: 456px;
+	background: #FFFFF9;
+	border: 1px solid #FFCE54;
+	box-sizing: border-box;
+	border-radius: 10px;
+
+	padding: 14px 23px 14px 23px;
+}
+
+.sm_icon {
+	height: 24px;
+	width: 24px;
+}
+
+.black-h2 {
+	color: #4E4E4E;
 	text-align: center;
+	justify-content: center;
 }
 
-progress[value] {
-	-webkit-appearance: none;
-   	appearance: none;
-
-	width: 100vw;
-	height: 10px;
-}
-
-progress[value]::-webkit-progress-bar {
-  background-color: #F9FBFF;
-  border-radius: 0px;
-}
-
-progress[value]::-webkit-progress-value {
-	background-color: #1C2ECC;
-	border-radius: 0px 5px 5px 0px;
-}
 
 iframe {
 	width: 100%;
@@ -213,36 +267,6 @@ iframe {
 	margin-left: auto;
 }
 
-.control {
-	width: 100vw;
-	height: 135px;
-	bottom: 0px;
-	left: 0px;
-	margin-top: 20px;
-	text-align: center;
-
-	position:absolute;
-
-}
-
-.control_feedback {
-	border-top: 2px solid #1C2ECC;
-	background: #F9FBFF;
-}
-
-.btn-container {
-	margin:0px;
-	text-align: center;
-	/*top:40px;*/
-
-}
-
-.fb-container {
-	position: relative;
-	top: 0px;
-	height: 40px;
-
-}
 
 .quiz_row {
 	display: flex;
@@ -269,27 +293,7 @@ iframe {
 	margin: auto;
 }
 
-.quote {
-	background: #FFFFFF;
-	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
-	border-radius: 20px;
-	width: 100%;
-	display: flex;
-	margin-bottom: 8px;
-}
 
-.quote-line-1 {
-	padding-left: 30px;
-	padding-right: 15px;
-	padding-top: 5px;
-}
-
-.quote-line-2 {
-	padding-left: 30px;
-	padding-right: 15px;
-	padding-top: 5px;
-	padding-bottom: 15px;
-}
 
 .highlight {
 	font-weight: bold;
@@ -396,6 +400,42 @@ iframe {
 	align-items: center;
 
 	color: #FFFFFF;
+}
+
+.sec-btn {
+	width: 312px;
+	height: 49px;
+
+	background: #F9FBFF;
+	border: 2px solid #1C2ECC;
+	box-sizing: border-box;
+	border-radius: 10px;
+
+	font-family: Playfair Display;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 24px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+
+	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+
+
+	color: #1C2ECC;
+
+}
+
+.sec-btn span {
+	font-size: 18px;
+	line-height: 24px;
+
+	align-items: center;
+
+	color: #1C2ECC;
 }
 
 /*#back {
